add third force

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
           </p>
           <h5>Force 3 (<span id="force3"></span>)</h5>
           <p style="color:green;" id="force3_xy"></p>
+          <p class="range-field">
+            <label for="force-3-weight">Magnitude (Newtons)</label>
+            <input name="force-3-weight" type="range" id="force-3-weight" min="0" max="500" />
+          </p>
+          <p class="range-field">
+            <label for="force-3-angle">Angle (Degrees)</label>
+            <input name="force-3-angle" type="range" id="force-3-angle" min="0" max="360" />
+          </p>
+          <h5>Equilibrium Force (<span id="force4"></span>)</h5>
+          <p id="force4_xy"></p>
+
         </form>
       </div>
       <div class="col s6">
