display equilibrium force

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="col s6" style="overflow:auto;height:75vh">
         <ul id="forces" class="collapsible popout">
         </ul>
+        <h4 id="equilibrium-force"></h4>
       </div>
       <div class="col s6">
         <canvas id="diagram" width=400 height=400></canvas>
